# platformer2d

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  compile_commands.json
assets/levels/: level_editor.json
cmd/game/: main.cpp
cmd/level_editor/: main.cpp
include/: animation_state.h  animation_system.h  components.h  constants.h  debug.h  game.h  input_handler.h  level_editor.h  level_scene.h  macros.h  physics_system.h  scene.h
include/components/: animation_component.h  collision_component.h  component.h  movement_component.h  physics_component.h  position_component.h  render_component.h
include/handlers/: asset_handler.h  input_handler.h
include/level_editor/: tile.h  tile_map.h  tile_picker.h
include/managers/: asset_manager.h  input_manager.h  manager.h
include/scenes/: level_editor.h  level_scene.h  scene.h  tile_map.h
include/systems/: animation_state_system.h  animation_system.h  physics_system.h  render_system.h
src/: animation_state_system.cpp  animation_system.cpp  asset_manager.cpp  game.cpp  input_handler.cpp  level_editor.cpp  level_scene.cpp  main.cpp  physics_system.cpp
src/components/: animation_component.cpp  collision_component.cpp  movement_component.cpp  physics_component.cpp  position_component.cpp  render_component.cpp
src/handlers/: asset_handler.cpp  input_handler.cpp
src/level_editor/: tile_map.cpp  tile_picker.cpp
src/managers/: asset_manager.cpp  input_manager.cpp
src/scenes/: level_editor.cpp  level_scene.cpp  tile_map.cpp
src/systems/: animation_state_system.cpp  animation_system.cpp  physics_system.cpp  render_system.cpp
